<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/street_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lot_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/lot_name"
        app:layout_constraintStart_toStartOf="@+id/lot_name"
        app:layout_constraintTop_toBottomOf="@+id/lot_name" />

    <TextView
        android:id="@+id/lot_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hour"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/lot_days"
        app:layout_constraintStart_toStartOf="@+id/lot_days"
        app:layout_constraintTop_toBottomOf="@+id/lot_days" />

    <TextView
        android:id="@+id/lot_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cost"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lot_hours"
        app:layout_constraintStart_toStartOf="@+id/lot_hours"
        app:layout_constraintTop_toBottomOf="@+id/lot_hours" />



</androidx.constraintlayout.widget.ConstraintLayout>