<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="100dp">

    <TextView
        android:id="@+id/day"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/prob_perc"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/paid_free_val"
        app:layout_constraintEnd_toEndOf="@+id/probability"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/probability"
        app:layout_constraintTop_toBottomOf="@+id/probability" />

    <TextView
        android:id="@+id/probability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/probability"
        app:layout_constraintStart_toEndOf="@+id/paid_free"
        app:layout_constraintTop_toTopOf="@+id/paid_free" />

    <TextView
        android:id="@+id/paid_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/paid_free"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="@+id/day" />

    <TextView
        android:id="@+id/paid_free_val"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/paid"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintEnd_toEndOf="@+id/paid_free"
        app:layout_constraintStart_toStartOf="@+id/paid_free"
        app:layout_constraintTop_toBottomOf="@+id/paid_free" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/notes2"
        app:layout_constraintStart_toEndOf="@+id/probability"
        app:layout_constraintTop_toTopOf="@+id/probability" />

    <TextView
        android:id="@+id/notes_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/notes"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/notes"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

</androidx.constraintlayout.widget.ConstraintLayout>