<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/street_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/street_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/reg_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/reg_sign"
        layout="@layout/parking_reg_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notes_val"
        app:layout_constraintTop_toTopOf="@+id/street_name" />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="138dp"
        android:text="@string/notes2"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/notes_val"
        app:layout_constraintEnd_toStartOf="@+id/reg_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_name" />

    <TextView
        android:id="@+id/notes_val"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="@string/notes"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/free"
        app:layout_constraintEnd_toStartOf="@+id/reg_sign"
        app:layout_constraintStart_toStartOf="@+id/notes"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <TextView
        android:id="@+id/free"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/free"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/reg_sign"
        app:layout_constraintEnd_toEndOf="@+id/notes_val"
        app:layout_constraintStart_toStartOf="@+id/notes_val"
        app:layout_constraintTop_toBottomOf="@+id/notes_val" />

    <include
        android:id="@+id/prob_view"
        layout="@layout/street_prob_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free" />

    <TextView
        android:id="@+id/alert_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/alert_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>